# smart-resume-parser-job-matcher

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: skills.txt
matcher/: job_matcher.py
parser/: resume_parser.py
