[project]
name = "smart-resume-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "streamlit>=1.52.1",
]
